example/secondfile/objects/Ids_Temo_Obj__c.object
<CustomObject>
    <description>This is for storing the Ids of the Customer Sites and Vasa Related details</description>
    <fields>
        <fullName>Address__c</fullName>
        <formula>TEXT(Site__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBY__c</fullName>
        <formula>Site__r.CreatedBy.FirstName +&apos; &apos;+Site__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedBY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndCustomerName__c</fullName>
        <description>This will get the end customer name from End Customer Look Up</description>
        <formula>Site__r.End_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITPAResponse__c</fullName>
        <description>This is to tracj ITPA Response Status</description>
        <formula>Site__r.ASE_ITPA_Response_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITPA Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for marking the flag if the records are updated on not</description>
        <label>IsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LecName__c</fullName>
        <description>This is for populating the LEC Name</description>
        <label>Lec Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteIDs__c</fullName>
        <description>This is for storing the SIte IDs</description>
        <label>Site IDs</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_CreatedDate__c</fullName>
        <formula>Site__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a look up to the site</description>
        <label>AT&amp;T Customer Site</label>
        <referenceTo>CustomerSite__c</referenceTo>
        <relationshipLabel>Ids</relationshipLabel>
        <relationshipName>Ids</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This is for getting the status on the Record</description>
        <formula>TEXT(Site__r.VASA_Response_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Ids (Temo Obj)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Site__c</columns>
        <columns>LecName__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LecName__c</field>
            <operation>notContain</operation>
            <value>AT&amp;T</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Ids-{000000}</displayFormat>
        <label>Ids (Temo Obj) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ids</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>